force-app/main/default/objects/ILNHdefaults__c/ILNHdefaults__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Default settings for the environment of IL - Noordhoff Health</description>
    <label>IL NH Defaults</label>
</CustomObject>