force-app/main/default/objects/ILNHdefaults__c/fields/ContractOwnerExpirationNotice__c.field-meta.xml
<CustomField>
    <fullName>ContractOwnerExpirationNotice__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Contract Owner Expiration Notice</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>