force-app/main/default/objects/ILNHdefaults__c/fields/InvoicingPaymentTermDays__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPaymentTermDays__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Invoicing Payment Term (days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>