force-app/main/default/objects/ILNHdefaults__c/fields/OpportunityLockedRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLockedRecordTypeID__c</fullName>
    <defaultValue>&apos;0121t0000001amEAAQ&apos;</defaultValue>
    <label>Opportunity Locked RecordType ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>