force-app/main/default/objects/ILNHdefaults__c/fields/StandardPriceBookID__c.field-meta.xml
<CustomField>
    <fullName>StandardPriceBookID__c</fullName>
    <defaultValue>&quot;01s1t000004aqqbAAA&quot;</defaultValue>
    <label>Standard Price Book ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>